# AniFind-API

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  config.py  createPhash.py  create_preview.py  docker-compose.minio.yml  docker-compose.redis.yml  docker-compose.yml  frames_data.json  generate_data.py  getmeta.py  init.py  main.py  merge_individual_data.py  minio_client.py  pyproject.toml  rename.py  run_api.py  searchPhash.py  setup_minio.py  validate-docker.py
app/: main.py
app/models/: image_search_models.py  video_models.py
app/routers/: __init__.py  image_search.py
app/services/: __init__.py  frame_extractor.py  frame_search.py  image_search_service.py
