[project]
name = "whats-episode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av>=15.0.0",
    "faiss-cpu>=1.11.0",
    "fastapi[standard]>=0.115.12",
    "ffmpeg>=1.4",
    "imagehash>=4.3.2",
    "memory-profiler>=0.61.0",
    "minio>=7.2.16",
    "numpy>=2.3.0",
    "opencv-contrib-python-headless>=4.11.0.86",
    "pillow>=11.2.1",
    "tqdm>=4.67.1",
]
